[tool.poetry]
name = "llm-as-master"
version = "0.1.0"
description = ""
authors = ["another"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-opt = "^0.6.6"
func-timeout = "^4.3.5"
joblib = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
